--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.7.3",
     "react": "^16.8.3",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.3",
+    "react-responsive-modal": "^3.6.0",
     "react-scripts": "2.1.5"
   },
   "scripts": {
